--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 spring.application.name=curso
-
-spring.profiles.active=test
-
+spring.profiles.active=local
 spring.jpa.open-in-view=true
+server.error.include-message=always
 
-server.error.include-message=always 
