--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,13 @@
 		    <version>8.0.33</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
+			<dependency>
+			    <groupId>org.mariadb.jdbc</groupId>
+			    <artifactId>mariadb-java-client</artifactId>
+			    <version>3.5.5</version>
+			</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-data-jpa</artifactId>
