--- a/src/main/resources/application-cpanel.properties
+++ b/src/main/resources/application-cpanel.properties
@@ -1,5 +1,12 @@
-spring.datasource.url=jdbc:mysql://162.251.85.24:3306/teusiaqe_dadosJotaSystem?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+# Datasource
+spring.datasource.url=jdbc:mysql://162.251.85.24:3306/teusiaqe_meu_banco?useSSL=false&serverTimezone=UTC
 spring.datasource.username=teusiaqe
 spring.datasource.password=Jota1@@jota79
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
+spring.sql.init.mode=always
