--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=curso
-spring.profiles.active=local
+spring.profiles.active=cpanel
 spring.jpa.open-in-view=true
 server.error.include-message=always
+spring.jpa.show-sql=true
 
